syntax = "proto3";
package proto;

message ChatReq {
    string content = 1;
}

message ChatAck {
    int32 status = 1;
    string content = 2;
}

message BytesReq {
    bytes data = 1;
}

message BytesAck {
    int32 status = 1;
    bytes data = 2;
}